[project]
name = "cli-si"
version = "0.1.0"
description = "Shell interpreter powered by LLMs - translates natural language to shell commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "openai",
]

[project.scripts]
si = "si:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["si.py"]
